@page RN12 Release notes for VIPR 1.2

Features:
-----------

Build system
------------

Fixed bugs
-----------
- allow comments at end of line in viprchk
- allow empty and pure comment lines in viprcomp

Miscellaneous
-----------
- improve log outputs if checking the certificate fails by adding the constraint names
- remove compactification marker as a potential source of unsuccessful domination checks

@page RN11 Release notes for VIPR 1.1

Features:
-----------
- handling of incomplete derivations (see Certificate Version 1.1)

Build system
------------

Fixed bugs
-----------
- all constraints are now considered for checking the feasibility of solutions
- improved error messages

Data structures
-----------


@page RN10 Release notes for VIPR 1.0

Features:
-----------
-  verify the correctness of results computed by mixed-integer linear programming solvers by verifying the certificates in VIPR 1.0 format