@@ -15,6 +15,7 @@ Miscellaneous
 -----------
 - improve log outputs if checking the certificate fails by adding the constraint names
 - remove compactification marker as a potential source of unsuccessful domination checks
+- rewrite sparse vector comparison to reduce calls to compactify()
 
 @page RN11 Release notes for VIPR 1.1
 
